<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">北京实时公交</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_title">北京实时公交</string>
    <string name="set">设置</string>
    <string name="more">更多</string>
    <string name="feedback">反馈</string>
    <string name="news">新闻</string>
    <string name="line">线 路：</string>
    <string name="station">站 点：</string>
    <string name="direction">方 向：</string>
    <string name="search">查询</string>
    <string name="real_data_search">实时查询</string>
    <string name="follows_car">关注车况</string>
    <string name="enter_station_car">实时查询</string>
    <string name="about_us">关于我们</string>
    <string name="version_message">版本信息</string>
    <string name="select_line">请选择或者输入线路</string>
    <string name="select_line_first">请先选择线路</string>
    <string name="select_one_line">请在线路列表中选择线路</string>
    <string name="select_direction">请选择方向</string>
    <string name="select_direction_first">请先选择方向</string>
    <string name="select_one_direction">请在方向列表中选择方向</string>
    <string name="select_station">请选择站点</string>
    <string name="select_station_first">请先选择站点</string>
    <string name="select_line_and_direction_first">请先选择线路和方向</string>
    <string name="select_one_station">请在站点列表中选择站点</string>
    <string name="back">返回</string>
    <string name="commit">提交</string>
    <string name="version_msg">版本信息</string>
    <string name="delete_single">删除本条</string>
    <string name="delete_all">删除全部</string>
    <string name="station_correct">站点纠错</string>
    <string name="bus_correct">车辆纠错</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="save">保存</string>
    <string name="beijingSubway">北京地铁</string>
    <string name="msg_thankfor_user_suggests">欢迎您对我们提出宝贵的意见和建议：</string>
    <string name="hint_text_prompt_user_input_suggets">您的反馈意见(500字以内)</string>
    <string name="text_pass_size">最多允许 输入500个字</string>
    <string name="hint_text_input_qq_or_phone">QQ或手机号</string>
    <string name="text_thankfor_support">请留下您的联系方式，感谢您的支持：</string>
    <string name="hint_text_input_station_error_type">请输入其他错误情况（500字以内）</string>
    <string name="limit_input_text_length">最多允许输入500个字</string>
    <string name="check_net_work">网络不给力，请稍后再试</string>
    <string name="sending">正在发送</string>
    <string name="loading">加载中...</string>
    <string name="commit_success">提交成功，感谢您的宝贵意见</string>
    <string name="commit_fail">提交失败</string>
    <string name="net_error_prompt">网络原因无法刷新到站数据,5秒后自动刷新</string>
    <string name="item_prompt">item_prompt</string>
    <string name="collect_station">收藏站点</string>
    <string name="transfer_search">换乘查询</string>
    <string name="bus_prompt">公交提示</string>
    <string name="exit_confirm">确定退出北京实时公交客户端?</string>
    <string name="busCorrectMsg">报错车辆信息：</string>
    <string name="busId">编号：</string>
    <string name="nextStation">车辆下一站：</string>
    <string name="nextStationDistance">距下一站：</string>
    <string name="errorCause">报错原因：</string>
    <string name="noCollectStation">暂无收藏站点</string>
    <string name="hasNewVersion">有新版本</string>
</resources>
