<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/actionTitleLl" layout="@layout/actionbar_with_buttons" />
    <TextView android:textSize="@dimen/text_size_sub_title" android:gravity="center_vertical" android:id="@id/welcomeTv" android:background="@drawable/ic_bg_net_error" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/text_welcome_height" android:text="@string/msg_thankfor_user_suggests" />
    <EditText android:textSize="@dimen/text_size_edit" android:gravity="top" android:id="@id/suggestionEt" android:layout_width="fill_parent" android:layout_height="180.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="3.0dip" android:hint="@string/hint_text_prompt_user_input_suggets" android:selectAllOnFocus="true" android:maxLength="500" android:imeOptions="actionNext" />
    <TextView android:textColor="@color/red" android:gravity="center_vertical" android:id="@id/promptTv" android:paddingLeft="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_pass_size" />
    <TextView android:textStyle="bold" android:gravity="center_vertical" android:id="@id/thanksTv" android:paddingLeft="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/text_thankfor_support" />
    <EditText android:textSize="@dimen/text_size_edit" android:id="@id/contactEt" android:layout_width="fill_parent" android:layout_height="@dimen/title_height" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/hint_text_input_qq_or_phone" android:singleLine="true" android:inputType="number" android:imeOptions="actionDone" />
</LinearLayout>