<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/searchRl_mask" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="9.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/searchLl" android:background="@drawable/ic_bg_query_condations" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
        <RelativeLayout style="@style/RealDataSearchSelectRl">
            <TextView android:id="@id/lineTv" android:text="@string/line" style="@style/SubTitleText" />
            <EditText android:id="@id/lineEt" android:hint="@string/select_line" android:singleLine="true" android:layout_toRightOf="@id/lineTv" android:imeOptions="actionNext" style="@style/SearchInputActv" />
            <ImageButton android:id="@id/lineSelectImageBtn" android:padding="10.0dip" style="@style/SelectImageButton" />
        </RelativeLayout>
        <RelativeLayout style="@style/RealDataSearchSelectRl">
            <TextView android:id="@id/directionTv" android:text="@string/direction" style="@style/SubTitleText" />
            <EditText android:id="@id/directionEt" android:hint="@string/select_direction" android:layout_toRightOf="@id/directionTv" style="@style/SearchInputActv" />
            <ImageButton android:id="@id/directionSelectImageBtn" style="@style/SelectImageButton" />
        </RelativeLayout>
        <RelativeLayout style="@style/RealDataSearchSelectRl">
            <TextView android:id="@id/stationTv" android:text="@string/station" style="@style/SubTitleText" />
            <EditText android:id="@id/stationEt" android:hint="@string/select_station" android:layout_toRightOf="@id/stationTv" style="@style/SearchInputActv" />
            <ImageButton android:id="@id/stationSelectImageBtn" style="@style/SelectImageButton" />
        </RelativeLayout>
    </LinearLayout>
    <Button android:textSize="@dimen/text_size_search" android:textColor="@color/white" android:id="@id/searchBtn" android:background="@drawable/bg_button_single" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="50.0dip" android:layout_marginRight="50.0dip" android:text="@string/search" android:layout_below="@id/searchLl" android:layout_centerHorizontal="true" />
    <LinearLayout android:background="@drawable/bg_transparent" android:paddingTop="38.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:layout_marginBottom="10.0dip">
        <TextView android:visibility="invisible" android:layout_marginLeft="5.0dip" android:text="@string/line" style="@style/SubTitleText" />
        <ListView android:id="@id/lineLv" android:background="@drawable/bg_listview_select_line" android:visibility="gone" android:fadingEdgeLength="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:divider="@null" />
    </LinearLayout>
    <LinearLayout android:background="@drawable/bg_transparent" android:paddingTop="90.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip">
        <TextView android:visibility="invisible" android:layout_marginLeft="5.0dip" android:text="@string/direction" style="@style/SubTitleText" />
        <ListView android:id="@id/directionLv" android:background="@drawable/bg_listview_select_line" android:visibility="gone" android:fadingEdgeLength="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:divider="@null" />
    </LinearLayout>
    <LinearLayout android:background="@drawable/bg_transparent" android:paddingTop="142.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:layout_marginBottom="10.0dip">
        <TextView android:visibility="invisible" android:layout_marginLeft="5.0dip" android:text="@string/station" style="@style/SubTitleText" />
        <ListView android:id="@id/stationLv" android:background="@drawable/bg_listview_select_line" android:visibility="gone" android:fadingEdgeLength="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:divider="@null" />
    </LinearLayout>
</RelativeLayout>