<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/actionTitleLl" layout="@layout/actionbar_with_buttons" />
    <LinearLayout android:orientation="vertical" android:id="@id/contentLl" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/actionTitleLl">
        <TextView android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/stationCorrectSubTitleTv" android:paddingLeft="10.0dip" style="@style/TextView.NotNetWork" />
        <ListView android:id="@id/stationLv" android:layout_width="fill_parent" android:layout_height="0.0dip" android:divider="@null" android:layout_weight="1.0" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/text_size_edit" android:gravity="center_vertical" android:id="@id/stationErrorTypeTv" android:background="@drawable/bg_button_station_error_type" android:paddingLeft="10.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/text_welcome_height" android:layout_marginLeft="5.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="5.0dip" android:onClick="onClick" />
            <EditText android:textSize="@dimen/text_size_edit" android:gravity="top" android:id="@id/stationErrorEt" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="5.0dip" android:hint="@string/hint_text_input_station_error_type" android:maxLength="500" android:layout_weight="1.0" />
            <TextView android:textColor="@color/red" android:gravity="center_vertical" android:id="@id/promptTv" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/limit_input_text_length" />
            <TextView android:textStyle="bold" android:gravity="center_vertical" android:id="@id/thanksTv" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_thankfor_support" />
            <EditText android:textSize="@dimen/text_size_edit" android:id="@id/phoneNumberEt" android:layout_width="fill_parent" android:layout_height="@dimen/text_welcome_height" android:layout_marginLeft="5.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:hint="@string/hint_text_input_qq_or_phone" android:singleLine="true" android:inputType="phone" android:imeOptions="actionDone" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/actionTitleLl">
        <TextView android:textColor="@color/black" android:gravity="center_vertical" android:paddingLeft="10.0dip" android:visibility="invisible" style="@style/TextView.NotNetWork" />
        <ListView android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/text_size_edit" android:gravity="center_vertical" android:background="@drawable/bg_button_station_error_type" android:paddingLeft="10.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/text_welcome_height" android:layout_marginLeft="5.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="5.0dip" />
            <ListView android:id="@id/errorTypeLv" android:visibility="gone" android:scrollbars="none" android:fadingEdgeLength="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="10.0dip" android:divider="@null" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>